--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body {
-    background-color: aqua;
+    background-color: antiquewhite;
+}
+
+a {
+    text-decoration: none;
+    margin-right: 20px;
 }
